# AIzo_p1

./: CMakeLists.txt  config.conf  lib.h  main.cpp  results.txt
Scraper/: RandomNumbersTxTGen.cpp
TestNumbers/: ascending_data.txt  float_data.txt  mixed_data.txt  partially_sorted_33_data.txt  partially_sorted_66_data.txt
Util/: AizoArray.h  AizoArray.tpp  AizoArrayBase.h  CLI.cpp
Util/File/: FileUtill.cpp  FileUtill.h  ResultSaver.cpp  ResultSaver.h
Util/Sorting/: HeapSort.h  HeapSort.tpp  InsertionSort.h  InsertionSort.tpp  QuickSort.h  QuickSort.tpp  ShellSort.h  ShellSort.tpp
test/: AizoArrayTest.cpp  SortingTest.cpp  TestCLI.cpp  TestRunner.cpp
